--- a/posts/2026-01-01.md
+++ b/posts/2026-01-01.md
@@ -7,7 +7,7 @@ I've used ad-hoc versions for a while, but I wanted to take some time to go thro
 
 In my opinion the demand transform is **essential** for declarative recursive programming, but it's often ignored.
 It has some caveats, and can (asymptotically) harm rather than improve performance, but it can also improve performance by ridiculous amounts.
-By the end of the post I hope to have explained the transform to you, motivated its application even in batch data processing, and optimize a Datalog formulation of the Rust borrow checker almost to zero.
+By the end of the post I hope to have explained the transform to you, motivated its application even in batch data processing, and optimize a Datalog formulation of the Rust borrow checker almost to zero (update: this is not news to the Rust folks).
 We'll also see an example where it makes things much worse, and try to explain why (it bakes in atom-at-a-time joins, rather than worst-case optimal joins).
 
 First, let's discuss **imperative** versus **declarative** programming, to motivate the transformation.
@@ -630,6 +630,17 @@ Unfortunately, the ones that come with the repo all seem to be for a more advanc
 The more advanced analyses are not things that I'm going to do manually, which means I'm also going to code up the demand transform.
 
 I was always going to code it up.
+
+### Update: 2026-01-05
+
+Folks on the Rust team explained that they are aware of this sort of work, and in particular the ability for the demand transform to improve the naive analysis.
+They have a "hybrid" variant that will pick between easy and harder rules based on the "potential errors", also determined using Datalog (through my reading).
+The hybrid time too about 14ms when I ran it locally, so it checks out that it is fairly similar to the demand-transformed forms of the rules.
+
+We are in touch about whether this fizzles as things get complicated, or whether it just gets harder to do manually.
+I imagine I'll learn more, and if it turns out amazing I'll share it!
+
+Thanks very much to the Rust folks for their openness, and eagerness to collaborate!
 
 ## Coding up the Demand Transform
 
